--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 SESSION_ID = 'VAJIRA-MD=DM1HXQ4L#x-_WIC_ERg0xBPz1jAuhVxu41JVYpVJqo1MsPfaRONM'
 OWNER_NUMBER = '93730285765'
+POSTGRESQL_URL = 'postgres://vajiratech_user:oSIFl2xmSojMZ0rkzdd0g0W6msuVTpNN@dpg-cpd7fjv109ks73e5gtig-a.frankfurt-postgres.render.com/vajiratech'
